# Aurora

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: README.md  devcontainer.json
android/: gradlew.bat  settings.gradle
assets/: aurora-launcher.icns  aurora.icns
data/: ETHUSDT_1m_sample.parquet  team_aliases.json
docs/: TEAM_SECURITY_SETUP.md  architecture.md  index.html
drafts/: D-5-supplements-policy-spec.md
scripts/: build_aiohttp_stub.py  build_exe.py  build_launcher.py  dev.ps1  fetch_ohlcv.py  generate_icon.py  generate_launcher_icon.py  sanity_stage1d_eth.py
src/aurora/: __init__.py  (+4 more)
tests/: conftest.py  test_active_position_store.py  test_api.py  test_apk_updater.py  test_bot_instance.py  test_ccxt_client.py  test_coinalyze.py  test_config_env.py  test_config_store.py  test_core_stats.py  test_cost.py  test_dashboard_flow.py  test_dashboard_ratios.py  test_dashboard_series.py  test_engine.py  test_exchange_base.py  test_executor.py  test_fetch_ohlcv.py  test_indicators.py  test_launcher.py  test_log_buffer.py  test_market_pure_helpers.py  test_market_series_helpers.py  test_multitf_cache.py  test_ratios_aggregator.py  test_release_check.py  test_replay.py  test_risk.py  test_signal.py  test_smoke.py  test_stats.py  test_strategy.py  test_team_aliases.py  test_telegram.py  test_tf.py  test_timeouts.py  test_trades_store.py  test_updater.py  test_v0_1_92_single_instance.py  test_v0_1_93_launcher_mutex.py  (+1 more)
ui/: index.html
website/: app.js  index.html  style.css
(+102 files in other folders)
