[project]
name = "untrack"
version = "0.1.0"
description = "고빈도 룰 기반 자동매매 봇 — 멀티 거래소 / 멀티 페어 / 고배율"
authors = [{name = "UnTrack Team"}]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "ccxt>=4.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pywebview>=5.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
build = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
